# f16_gcas

./: .editorconfig  .gitignore  Autotrans_shift.slxc  Pipfile  README.md  plot_graph.py  pyproject.toml  read_UR_results.py  read_results.py  run_benchmarks.py
benchmarks/: __main__.py  _autotrans.py  benchmark.py  benchmark_3.py  benchmark_4.py  benchmark_5.py  benchmark_6a.py  benchmark_6b.py  benchmark_6c.py  benchmark_cc4.py  benchmark_f16.py  benchmark_f16UR.py  benchmark_f16UR_2300.py  benchmark_f16UR_2338.py  benchmark_f16UR_2338_2.py  benchmark_f16UR_2338_4.py  benchmark_f16UR_2338_5.py  benchmark_f16UR_2338_6.py  benchmark_f16UR_2350.py  benchmark_f16UR_2400.py  benchmark_f16_2300.py  benchmark_f16_2338.py  benchmark_f16_2338_2.py  benchmark_f16_2338_4.py  benchmark_f16_2338_5.py  benchmark_f16_2338_6.py  benchmark_f16_2350.py  benchmark_f16_2400.py  benchmark_s3.py  simulate_model.py  test_autotrans_input.csv
benchmarks/models/: __init__.py  autotrans.py  cars.py  f16.py  f16_alt_2300.py  f16_alt_2338.py  f16_alt_2338_2.py  f16_alt_2338_4.py  f16_alt_2338_5.py  f16_alt_2338_6.py  f16_alt_2350.py  f16_alt_2400.py
tests/: test_autotrans.py  test_autotrans_outputs.csv  test_cars.py  test_f16.py
tests/data/: autotrans_outputs.csv  cars_inputs.csv  cars_outputs.csv
