[tool.poetry]
name = "arch-benchmarks2021"
version = "0.1.0"
description = ""
authors = ["Aniruddh Chandratre <achand75@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
aerobench = {git = "https://github.com/qthibeault/aerobenchvvpython.git"}
psy-taliro = "1.0.0a11"
partx = "0.1.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
